[package]
name = "glu"
version = "0.7.26"
edition = "2021"
license = "GPL-3.0-only"

description = "Unpacks a Markdown document full of code snippets into a temp directory."
repository = "https://github.com/MaddieM4/glu"
readme = "README.md"

# TODO: keywords and categories

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
gray_matter = "0.2.8"
markdown = "1.0.0-alpha.16"
regex = "1.10.5"
remove_dir_all = "0.8.0"
reqwest = { version = "0.12.5", features = ["blocking"] }
safe-path = "0.1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tempdir = "0.3.7"
url = "2.5.1"
openssl-sys = "0.9.102"

[features]
vendored = ["openssl-sys/vendored"]
